master: Add direct facebook and google plus sharing buttons on article

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,10 @@ addthis:
   google: true
   pinterest: true
 
+sharing:
+  google_plus: true
+  facebook: true
+
 facebook:
 google_plus:
 twitter:
